# chatDF

./: .gitignore  Claude.md  STATUS.md  package.json  ralph-loop.sh  setup_server.sh
implementation/backend/: .env.example  pyproject.toml
implementation/backend/app/: config.py  database.py  dependencies.py  exceptions.py  main.py  models.py
implementation/backend/app/routers/: auth.py  catalog_search.py  conversations.py  dataset_search.py  datasets.py  export.py  health.py  query_history.py  saved_queries.py  settings.py  shared.py  usage.py  websocket.py
implementation/backend/tests/: conftest.py  factories.py  test_auth_service.py  test_cache_cleanup_task.py  test_chat_service.py  test_chat_service_extended.py  test_config.py  test_conversation_branch.py  test_conversation_import.py  test_correlations.py  test_database_pool.py  test_dataset_discover.py  test_dataset_search.py  test_dataset_service.py  test_dependencies.py  test_error_translator.py  test_error_translator_extended.py  test_error_translator_hardened_patterns.py  test_error_translator_new_patterns.py  test_error_translator_set_ops_ddl.py  test_exceptions.py  test_export.py  test_export_query_endpoints.py  test_file_cache.py  test_file_cache_retry.py  test_generate_sql.py  test_health.py  test_html_export.py  test_main_app.py  test_main_app_extended.py  test_models.py  test_persistent_cache.py  test_query_cache.py  test_query_cache_integration.py  test_query_history_star.py  test_query_pagination.py  test_sampling.py  test_saved_queries.py  test_saved_query_pin.py  test_shared_results.py
(+540 files in other folders)
